--- a/framer/config.json
+++ b/framer/config.json
@@ -1,7 +1,7 @@
 {
   "orientation" : 0,
   "updateDelay" : 0.3,
-  "designModeSelected" : 1,
+  "designModeSelected" : 0,
   "cachedDeviceHeight" : 667,
   "contentScale" : 1,
   "cachedDeviceWidth" : 375,
@@ -9,7 +9,7 @@
   "deviceType" : "apple-iphone-7-black",
   "sharedPrototype" : true,
   "propertyPanelToggleStates" : {
-
+    "Filters" : false
   },
   "projectId" : "60AE9674-936D-4DF0-A4C5-E9BF02BDFCBB",
   "deviceOrientation" : 0,
